# competitive-verifier

./: .gitignore  3rd-party-lisence.txt  DESIGN.md  LICENSE  README.md  pyproject.toml
.competitive-verifier/: .gitignore
.competitive-verifier/docs/: DESIGN.md  _config.default.yml  _config.yml  index.md
.competitive-verifier/docs/static/: DESIGN.md  action-template.yml  document.ja.md  document.md  installer.ja.md  installer.js  installer.md
.github/: FUNDING.yml  requirements.txt
.github/workflows/: example-awk.yml  example-hand.yml  example-oj.yml  example.yml  format.yml  lint.yml  release.yml  test.yml  update-major-version.yml  verify-single.yml  verify.yml
.verify-helper/: .gitignore
examples/: .gitignore  awk-config.toml  config.toml  prev-result.json
examples/awk/: abc181_a.awk  aplusb.awk  aplusb2.awk  aplusb2.md  aplusblocal.test.awk  circle_test.awk  verify_files.json  verify_files_without_token.json
examples/awk/sub/: echo.md
examples/cpp/: bit_minus.hpp  bit_minus_random_test.cpp  macros.hpp  monoids.hpp  segment_tree.hpp  segment_tree.md  segment_tree.point_set_range_composite.test.cpp  segment_tree.range_minimum_query.test.cpp  segment_tree.range_sum_query.test.cpp  union_find.aoj.test.cpp  union_find.hpp  union_find.yosupo.test.cpp  union_find_tree.aoj.test.cpp  union_find_tree.hpp  union_find_tree.yosupo.test.cpp
examples/cpp/segment_tree_tests/: segment_tree.point_set_range_composite.cpp  segment_tree.range_minimum_query.cpp  segment_tree.range_sum_query.cpp
examples/data/aplusb/: case01.in  case02.in  case03.in  case04.in  case05.in  case06.in  case06.out  case07.in  case07.out  case08.in
examples/go/: helloworld.aoj.go  helloworld_test.go
examples/go/aplusb_main/: aplusb.yosupo.go
examples/go/helloworld/: helloworld_test.go
examples/go/helloworld_main/: helloworld.aoj.go
examples/java/: Aplusb.java  Aplusb_test.java  Aplutb_test.java  HelloWorld_test.java
examples/nim/: aplusb.nim  aplusb_test.nim  headers.nim
examples/python/: hello_world.test.py  union_find.py  union_find.yosupo.py  union_find_aoj.test.py  union_find_yosupo.test.py
examples/test_for_documents/display_settings/: hidden.hello  hidden.md  multi_docs.md  never.md  no-index.md  visible.md
examples/test_for_documents/encoding/: EUC-KR.md  cp932.md  cp932.txt  encodings.md
integration_test_data/: .gitignore  test-repository.bundle
integration_test_data/CompileFailure/: verify.json
integration_test_data/CppData/: aplusb.hpp  aplusb.main.cpp  aplusb.test.cpp  config.toml  config_no_macros.toml  macros.hpp
integration_test_data/GoData/: config.toml
integration_test_data/HandMadeDocs/: result.json  root.txt  verify.json
integration_test_data/HandMadeDocs/display/: hidden.md  multi-never.md  multi-no-keep.md  multi-no-keep.txt  multi-no-keep2.md  multi-no-keep2.txt  multi.md  never.md  no-index.md  visible.md
integration_test_data/HandMadeDocs/docs/: _config.yml
integration_test_data/HandMadeDocs/libdoc/: front_matter.md  plain.html  plain_markdown.md
integration_test_data/HandMadeDocs/txts/: utf-16BE.txt  utf-16LE.txt  utf-8👍.txt
integration_test_data/IncludeExclude/: config.toml
integration_test_data/JavaData/examples/: Aplusb.java  Aplusb_main.java  Aplusb_test.java  Aplutb_test.java  HelloWorld.java  HelloWorld_test.java
integration_test_data/UserDefinedAndPythonData/: config.toml  failure.re.md  failure.wa.md
integration_test_data/UserDefinedAndPythonData/awk/: aplusb.awk  aplusb.test.awk  aplusb_direct.awk  div2ceil.awk  div2ceil.test.awk  (+3 more)
schema/: verify_files.schema.json  verify_result.schema.json
schema/definitions/: command.schema.json  result_status.schema.json  verification.schema.json
src/competitive_verifier/: app.py  arg.py  command.py  config.py  error.py  exec.py  git.py  github.py  log.py  merge.py  models.py  oj.py  oj_download_command.py  oj_test_command.py  resource.py  summary.py  util.py  utils.py
src/competitive_verifier_oj_clone/: config.py  list.py  shlex2.py  utils.py
src/competitive_verifier_resources/: __init__.py  _config.yml  doc_usage.txt  resources.py
src/oj_verify_clone/: config.py  list.py  python_compile.py  subprocess2.py
src/onlinejudge_verify/: config.py  utils.py
testdata/: .gitignore  rewrite_result.py
testdata/docs_settings/: _config.yml
testdata/targets/: failure.re.md
tests/: __init__.py  conftest.py  test_app.py  test_comparer.py  test_exec.py  test_log.py  test_merge.py  test_oj.py  test_summary.py  test_verification_files.py
tests/console/: test_app.py
tests/documents/: data.py  test_builder.py  test_dependency.py  test_front_matter.py  test_job.py  test_main.py  test_static_files.py  test_type.py
tests/download/: test_download.py  test_main.py
tests/inout/: test_check.py  test_merge_input.py  test_merge_result.py
tests/integration/: conftest.py  data.py  docs_data.py  mock.py  test_00_oj_resolve.py  test_01_verify.py  test_02_download.py  test_05_docs.py  test_command_docs.py  test_command_download.py  test_command_oj_resolve.py  test_command_verify.py  test_command_verify_error.py  test_git.py  test_integration.py  types.py  utils.py
tests/merge_input/: test_main.py
tests/merge_result/: test_main.py
tests/migrate/: test_subn.py
tests/models/: test_command.py  test_dependency.py  test_file.py  test_result.py  test_verification.py  test_verification_input.py
tests/oj/: test_config.py  test_oj.py  test_oj_test.py  test_problem.py  test_service.py
tests/oj_clone/: test_config.py  test_oj.py
tests/unit/: conftest.py  test_app.py  test_config.py  test_exec.py  test_github.py  test_log.py  test_summary.py  test_util.py
tests/verify/: test_main.py  test_split_state.py  test_verifier.py  test_verifier_verify.py
tests_integration/: conftest.py  mock.py  test_command_download.py  test_command_oj_resolve.py  test_command_verify.py  test_git.py
tests_integration/command/: conftest.py  test_command_docs.py  test_command_download.py  test_command_verify.py  test_command_verify_error.py  utils.py
tests_integration/data/: integration_data.py
(+327 files in other folders)
